--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 # This file lists all individuals having contributed content to the repository.
 
+Lizzie Turner <hello@lizzieturner.com>
+Anthony la'O <anthony.lao@holbertonschool.com>
 Steven Garcia <steven.garcia@holbertonschool.com>
 Binita Rai <binita.rai@holbertonschool.com>
